--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "challenge20",
+  "name": "react_portfolio",
   "version": "0.1.0",
   "private": true,
+ 
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "bootstrap": "^5.2.3",
-    "react-bootstrap": "^2.7.0",
-    "web-vitals": "^2.1.4",
-    "@emailjs/browser": "^3.10.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
+   
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
